# iced_ui

./: AGENTS.md  Cargo.toml  README.md  justfile  opencode.json
.github/: release-please-config.json  release-please-manifest.json
.github/actions/setup/: action.yaml
.github/workflows/: qa.yaml  release.yaml
.opencode/skills/iced/: SKILL.md
crates/demo/: CHANGELOG.md  Cargo.toml
crates/demo/src/: app.rs  icons.rs  main.rs  message.rs  state.rs
crates/demo/src/pages/: badge.rs  bottom_sheet.rs  button.rs  card.rs  checkbox.rs  chip.rs  colors.rs  date_time.rs  dialog.rs  divider.rs  fab.rs  icon_button.rs  inputs.rs  list.rs  loading.rs  menu.rs  mod.rs  navigation_bar.rs  navigation_drawer.rs  navigation_rail.rs  overview.rs  screen.rs  segmented_button.rs  slide_sheet.rs  snackbar.rs  tabs.rs  text.rs  tooltip.rs  top_app_bar.rs  tree.rs
crates/iced_ui/: CHANGELOG.md  Cargo.toml  build.rs
crates/iced_ui/src/: date_input.rs  datetime_input.rs  icons.rs  lib.rs  native.rs  position.rs  time_input.rs
crates/iced_ui/src/badge/: mod.rs  style.rs
crates/iced_ui/src/bottom_sheet/: mod.rs  style.rs
crates/iced_ui/src/button/: mod.rs  style.rs
crates/iced_ui/src/card/: mod.rs  style.rs
crates/iced_ui/src/checkbox/: mod.rs  style.rs
crates/iced_ui/src/chip/: mod.rs  style.rs
crates/iced_ui/src/color_picker/: mod.rs  style.rs
crates/iced_ui/src/date_time_core/: mod.rs  style.rs
crates/iced_ui/src/datetime_input/: core.rs  date.rs  datetime.rs  grid.rs  mod.rs  time.rs
crates/iced_ui/src/dialog/: mod.rs  style.rs
crates/iced_ui/src/divider/: mod.rs  style.rs
crates/iced_ui/src/fab/: mod.rs  style.rs
crates/iced_ui/src/icon_button/: mod.rs  style.rs
crates/iced_ui/src/list/: mod.rs  style.rs
crates/iced_ui/src/menu/: item.rs  mod.rs  overlay.rs  shortcut.rs  style.rs  trigger.rs
crates/iced_ui/src/navigation_bar/: mod.rs  style.rs
crates/iced_ui/src/navigation_drawer/: mod.rs  style.rs
crates/iced_ui/src/navigation_rail/: mod.rs  style.rs
crates/iced_ui/src/number_input/: mod.rs  numeric.rs
crates/iced_ui/src/progress/: mod.rs  style.rs
crates/iced_ui/src/screen/: mod.rs
crates/iced_ui/src/segmented_button/: mod.rs  style.rs
crates/iced_ui/src/slide_sheet/: mod.rs  style.rs
crates/iced_ui/src/snackbar/: mod.rs  notification.rs  state.rs  style.rs
crates/iced_ui/src/spinner/: mod.rs  style.rs
crates/iced_ui/src/tabs/: mod.rs  style.rs
crates/iced_ui/src/text/: mod.rs  style.rs
crates/iced_ui/src/text_input/: mod.rs  style.rs
crates/iced_ui/src/theme/: iced_compat.rs  mod.rs  scale.rs  tokens.rs
crates/iced_ui/src/tooltip/: bubble.rs  mod.rs  style.rs
crates/iced_ui/src/top_app_bar/: mod.rs  style.rs
crates/iced_ui/src/tree/: mod.rs  style.rs
crates/iced_ui_tests/: CHANGELOG.md  Cargo.toml
crates/iced_ui_tests/src/: lib.rs
crates/iced_ui_tests/tests/: badge.rs  bottom_sheet.rs  button.rs  card.rs  checkbox.rs  chip.rs  color_picker.rs  date_input.rs  datetime_input.rs  dialog.rs  divider.rs  fab.rs  icon_button.rs  interactions.rs  list.rs  menu.rs  navigation_bar.rs  navigation_drawer.rs  navigation_rail.rs  number_input.rs  progress.rs  screen.rs  segmented_button.rs  slide_sheet.rs  snackbar.rs  spinner.rs  tabs.rs  text.rs  text_input.rs  time_input.rs  tooltip.rs  top_app_bar.rs  tree.rs
