[workspace]
members = ["crates/*"]
default-members = ["crates/demo"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Lee Lian Hoy <bakakaba@tinkerer.space>"]
repository = "https://github.com/bakakaba/iced_ui"
homepage = "https://iced.rs"
categories = ["ui"]
keywords = ["gui", "ui", "interface"]
