[package]
name = "iced_ui"
version = "0.1.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A widget library built on top of iced-rs."
readme = "../../README.md"

[features]
default = ["svg", "image"]
svg = ["iced/svg"]
image = ["iced/image"]
qr_code = ["iced/qr_code"]
markdown = ["iced/markdown"]
lucide-icons = ["dep:lucide-icons"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
iced = { version = "0.14", features = ["advanced"] }
lucide-icons = { version = "1", features = ["iced"], optional = true }
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = "0.12.0"
