[package]
name = "iced_ui_tests"
version = "0.1.5"
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
iced = { version = "0.14", features = ["advanced", "image", "svg"] }
iced_test = "0.14"
# `lucide` is enabled explicitly so snapshot output is identical
# whether tests run via `cargo test -p iced_ui_tests` or
# `cargo test --workspace` (where feature unification with the demo
# crate would otherwise toggle it on only for workspace builds).
iced_ui = { path = "../iced_ui", features = ["lucide"] }
