[package]
name = "iced_ui_tests"
version = "0.1.9"
edition.workspace = true
publish = false
description = "Internal snapshot/integration tests for iced_ui. Kept as a separate, unpublished crate so test assets (snapshot PNGs, bundled fonts) and heavy dev-dependencies stay out of the published iced_ui package. See src/lib.rs for the full rationale."

[lib]
path = "src/lib.rs"

[dependencies]
iced = { version = "0.14", features = ["advanced", "image", "svg"] }
iced_test = "0.14"
# `lucide-icons` is enabled explicitly so snapshot output is identical
# whether tests run via `cargo test -p iced_ui_tests` or
# `cargo test --workspace` (where feature unification with the demo
# crate would otherwise toggle it on only for workspace builds).
iced_ui = { path = "../iced_ui", features = ["lucide-icons"] }
